--- a/module/Admin/view/admin/index/index.phtml
+++ b/module/Admin/view/admin/index/index.phtml
@@ -1,4 +1,4 @@
-<form class="form-signin">
+<form action="/admin/index" method="post" name="login" class="form-signin">
     <div class="text-center mb-4">
         <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
         <h1 class="h3 mb-3 font-weight-normal">Floating labels</h1>
