--- a/module/Admin/view/admin/login/index.phtml
+++ b/module/Admin/view/admin/login/index.phtml
@@ -1,3 +1,40 @@
+<?php
+$form = $this->form;
+$form->prepare();
+?>
+
+<?= $this->form()->openTag(); ?>
+
+<div class="text-center mb-4">
+    <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+    <h1 class="h3 mb-3 font-weight-normal">Floating labels</h1>
+    <p>Build form controls with floating labels via the <code>:placeholder-shown</code> pseudo-element. <a href="https://caniuse.com/#feat=css-placeholder-shown">Works in latest Chrome, Safari, and Firefox.</a></p>
+</div>
+<div class="form-label-group">
+<?= $this->formLabel($form->get('email')); ?>
+<?= $this->formElement($form->get('email')); ?>
+<?= $this->formElementErrors($form->get('email')); ?>
+</div>
+
+<div class="form-label-group">
+<?= $this->formLabel($form->get('password')); ?>
+<?= $this->formElement($form->get('password')); ?>
+<?= $this->formElementErrors($form->get('password')); ?>
+</div>
+
+
+<?//= $this->formElement($form->get('submit')); ?>
+
+<div class="checkbox mb-3">
+    <label>
+        <input type="checkbox" value="remember-me"> Remember me
+    </label>
+</div>
+<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+<p class="mt-5 mb-3 text-muted text-center">&copy; 2017-2018</p>
+
+<?= $this->form()->closeTag(); ?>
+<!--
 <form action="/admin/index" method="post" name="login" class="form-signin">
     <div class="text-center mb-4">
         <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
@@ -21,5 +58,7 @@
         </label>
     </div>
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-    <p class="mt-5 mb-3 text-muted text-center">&copy; 2017-2018</p>
+
 </form>
+
+-->
